--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,3 +115,32 @@ summary {
   position: relative;
   padding-left: 1.5rem;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.sr-only:focus {
+  position: absolute;
+  width: auto;
+  height: auto;
+  padding: 1rem;
+  margin: 0;
+  overflow: visible;
+  clip: auto;
+  white-space: normal;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  background-color: white;
+  color: black;
+  outline: 2px solid #2563eb;
+}
